{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 14,
  "lineage": "c067c1f7-0aac-e7ef-7d14-382b136c7bf5",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084738801947:network-acl/acl-07a8082ee60ccdb39",
            "default_network_acl_id": "acl-07a8082ee60ccdb39",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07a8082ee60ccdb39",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "084738801947",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-03347b74726ceb3df",
              "subnet-06886060b6e2f8f4b"
            ],
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            },
            "vpc_id": "vpc-07ac2348e8ffbe9cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084738801947:route-table/rtb-0a1406fed8088a944",
            "default_route_table_id": "rtb-0a1406fed8088a944",
            "id": "rtb-0a1406fed8088a944",
            "owner_id": "084738801947",
            "propagating_vgws": null,
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-07ac2348e8ffbe9cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084738801947:security-group/sg-0921bab24c8283160",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0921bab24c8283160",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "084738801947",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            },
            "vpc_id": "vpc-07ac2348e8ffbe9cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084738801947:internet-gateway/igw-03b64ea38699fb0d2",
            "id": "igw-03b64ea38699fb0d2",
            "owner_id": "084738801947",
            "region": "us-east-1",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            },
            "vpc_id": "vpc-07ac2348e8ffbe9cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03b64ea38699fb0d2",
            "id": "r-rtb-0a7d9724005112de61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0a7d9724005112de6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084738801947",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0a7d9724005112de6"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084738801947:route-table/rtb-0bd6a181d0b78f2e5",
            "id": "rtb-0bd6a181d0b78f2e5",
            "owner_id": "084738801947",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ac2348e8ffbe9cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084738801947",
            "id": "rtb-0bd6a181d0b78f2e5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084738801947:route-table/rtb-0a7d9724005112de6",
            "id": "rtb-0a7d9724005112de6",
            "owner_id": "084738801947",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ac2348e8ffbe9cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084738801947",
            "id": "rtb-0a7d9724005112de6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05063b55d3e7961f9",
            "region": "us-east-1",
            "route_table_id": "rtb-0bd6a181d0b78f2e5",
            "subnet_id": "subnet-06886060b6e2f8f4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c0df002556170cd",
            "region": "us-east-1",
            "route_table_id": "rtb-0a7d9724005112de6",
            "subnet_id": "subnet-03347b74726ceb3df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084738801947:subnet/subnet-06886060b6e2f8f4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06886060b6e2f8f4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084738801947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            },
            "vpc_id": "vpc-07ac2348e8ffbe9cb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084738801947",
            "id": "subnet-06886060b6e2f8f4b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084738801947:subnet/subnet-03347b74726ceb3df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03347b74726ceb3df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084738801947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            },
            "vpc_id": "vpc-07ac2348e8ffbe9cb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084738801947",
            "id": "subnet-03347b74726ceb3df",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084738801947:vpc/vpc-07ac2348e8ffbe9cb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07a8082ee60ccdb39",
            "default_route_table_id": "rtb-0a1406fed8088a944",
            "default_security_group_id": "sg-0921bab24c8283160",
            "dhcp_options_id": "dopt-02f696771a43577a2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ac2348e8ffbe9cb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a1406fed8088a944",
            "owner_id": "084738801947",
            "region": "us-east-1",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "084738801947",
            "id": "vpc-07ac2348e8ffbe9cb",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}